--- a/kitty/_downloads/055e3591463099e42785a872ce39996a/quick_access_terminal.conf
+++ b/kitty/_downloads/055e3591463099e42785a872ce39996a/quick_access_terminal.conf
@@ -4,19 +4,33 @@
 
 # lines 25
 
-#: The number of lines shown in the window, when the window is along
-#: the top or bottom edges of the screen. If it has the suffix px then
-#: it sets the height of the window in pixels instead of lines.
+#: The number of lines shown in the panel. Ignored for background,
+#: centered, and vertical panels. If it has the suffix px then it sets
+#: the height of the panel in pixels instead of lines.
 
 # columns 80
 
-#: The number of columns shown in the window, when the window is along
-#: the left or right edges of the screen. If it has the suffix px then
-#: it sets the width of the window in pixels instead of columns.
+#: The number of columns shown in the panel. Ignored for background,
+#: centered, and horizontal panels. If it has the suffix px then it
+#: sets the width of the panel in pixels instead of columns.
 
 # edge top
 
-#: Which edge of the screen to place the window along
+#: Which edge of the screen to place the panel on. Note that some
+#: window managers (such as i3) do not support placing docked windows
+#: on the left and right edges. The value background means make the
+#: panel the "desktop wallpaper". Note that when using sway if you set
+#: a background in your sway config it will cover the background drawn
+#: using this kitten. Additionally, there are three more values:
+#: center, center-sized and none. The value center anchors the panel
+#: to all sides and covers the entire display (on macOS the part of
+#: the display not covered by titlebar and dock). The panel can be
+#: shrunk and placed using the margin parameters. The value none
+#: anchors the panel to the top left corner and should be placed using
+#: the margin parameters. Its size is set by lines and columns. The
+#: value center-sized is just like none except that the panel is
+#: centered instead of in the top left corner and the margins have no
+#: effect.
 
 # background_opacity 0.85
 
@@ -29,25 +43,40 @@
 #: Hide the window when it loses keyboard focus automatically. Using
 #: this option will force focus_policy to on-demand.
 
+# grab_keyboard no
+
+#: Grab the keyboard. This means global shortcuts defined in the OS
+#: will be passed to kitty instead. Useful if you want to create an OS
+#: modal window. How well this works depends on the OS/window
+#: manager/desktop environment. On Wayland it works only if the
+#: compositor implements the inhibit-keyboard-shortcuts protocol
+#: <https://wayland.app/protocols/keyboard-shortcuts-inhibit-
+#: unstable-v1>. On macOS Apple doesn't allow applications to grab the
+#: keyboard without special permissions, so it doesn't work.
+
 # margin_left 0
 
-#: Set the left margin for the window, in pixels. Has no effect for
-#: windows on the right edge of the screen.
+#: Set the left margin for the panel, in pixels. Has no effect for
+#: right edge panels. Only works on macOS and Wayland compositors that
+#: supports the wlr layer shell protocol.
 
 # margin_right 0
 
-#: Set the right margin for the window, in pixels. Has no effect for
-#: windows on the left edge of the screen.
+#: Set the right margin for the panel, in pixels. Has no effect for
+#: left edge panels. Only works on macOS and Wayland compositors that
+#: supports the wlr layer shell protocol.
 
 # margin_top 0
 
-#: Set the top margin for the window, in pixels. Has no effect for
-#: windows on the bottom edge of the screen.
+#: Set the top margin for the panel, in pixels. Has no effect for
+#: bottom edge panels. Only works on macOS and Wayland compositors
+#: that supports the wlr layer shell protocol.
 
 # margin_bottom 0
 
-#: Set the bottom margin for the window, in pixels. Has no effect for
-#: windows on the top edge of the screen.
+#: Set the bottom margin for the panel, in pixels. Has no effect for
+#: top edge panels. Only works on macOS and Wayland compositors that
+#: supports the wlr layer shell protocol.
 
 # kitty_conf
 
@@ -72,8 +101,8 @@
 #: time. This allows you to specify which output is used, by name. If
 #: not specified the compositor will choose an output automatically,
 #: typically the last output the user interacted with or the primary
-#: monitor. You can get a list of available outputs by running: kitten
-#: panel --output-name list.
+#: monitor. Run kitten panel --output-name list to get a list of
+#: available outputs. Use listjson for a json encoded output.
 
 # start_as_hidden no
 
@@ -82,13 +111,12 @@
 
 # focus_policy exclusive
 
-#: How to manage window focus. A value of exclusive means prevent
-#: other windows from getting focus. However, whether this works is
-#: entirely dependent on the compositor/desktop environment. It does
-#: not have any effect on macOS and KDE, for example. Note that on
-#: sway using on-demand means the compositor will not focus the window
-#: when it appears until you click on it, which is why the default is
-#: set to exclusive.
+#: On a Wayland compositor that supports the wlr layer shell protocol,
+#: specify the focus policy for keyboard interactivity with the panel.
+#: Please refer to the wlr layer shell protocol documentation for more
+#: details. Note that different Wayland compositors behave very
+#: differently with exclusive, your mileage may vary. On macOS,
+#: exclusive and on-demand are currently the same.
 
 #: }}}
 
